Update map Quad Tree implementation